# fcg

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Lab01/: .gitignore  CMakeLists.txt  CMakePresets.json
Lab01/src/: main-binary.cpp  main-fan.cpp  main-strip.cpp  main.cpp
Lab02/: CMakeLists.txt
Lab02/include/: matrices.h  utils.h
Lab02/src/: main.cpp  matrices.h  shader_vertex.glsl  textrendering.cpp
Lab03/: CMakeLists.txt
Lab03/include/: matrices.h
Lab03/src/: main.cpp  shader_vertex.glsl
Lab04/: CMakeLists.txt
Lab04/src/: main.cpp  shader_fragment-tarefa2-parte1.glsl  shader_fragment-tarefa2-parte2.glsl  shader_fragment.glsl
Lab05/: CMakeLists.txt
Lab05/include/: matrices.h
Lab05/src/: main.cpp  shader_fragment-tarefa2.glsl  shader_fragment.glsl
common/: CMakeLists.txt  textrendering.cpp
glad/: CMakeLists.txt
glfw/: glfw3.h
text/: CMakeLists.txt  textrendering.cpp  utils.h
